--- a/css/main.css
+++ b/css/main.css
@@ -390,6 +390,11 @@ body {
   background-color: #c4c4c4;
 }
 
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px), screen and (min-resolution: 192dpi) and (max-width: 767px), screen and (min-resolution: 2dppx) and (max-width: 767px) {
+  .hero {
+    background-image: url(../../imagies/Hero/\ img-mobile@2x.jpg);
+  }
+}
 .hero-container {
   display: flex;
   flex-direction: column;
@@ -440,9 +445,24 @@ body {
   background-color: #188ce8;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .hero {
     background-image: url(../../imagies/Hero/img-tablet.jpg);
+  }
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), screen and (min-resolution: 192dpi) and (min-width: 768px), screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .hero {
+    background-image: url(../../imagies/Hero/img-tablet@2x.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: url(../../imagies/Hero/img-desctop.png);
+  }
+}
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+  .hero {
+    background-image: url(../../imagies/Hero/img-tablet@2x.jpg);
   }
 }
 .our-advantages-container {
