--- a/css/main.css
+++ b/css/main.css
@@ -383,7 +383,7 @@ body {
 }
 .hero {
   min-height: 400px;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)) url(../../imagies/Hero/\ img-mobile.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../imagies/Hero/img-mobile.jpg);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -392,7 +392,7 @@ body {
 
 @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px), screen and (min-resolution: 192dpi) and (max-width: 767px), screen and (min-resolution: 2dppx) and (max-width: 767px) {
   .hero {
-    background-image: url(../../imagies/Hero/\ img-mobile@2x.jpg);
+    background-image: url(../../imagies/Hero/img-mobile@2x.jpg);
   }
 }
 .hero-container {
@@ -457,12 +457,12 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .hero {
-    background-image: url(../../imagies/Hero/img-desctop.png);
+    background-image: url(../../imagies/Hero/img-desctop.jpg);
   }
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 1200px) {
   .hero {
-    background-image: url(../../imagies/Hero/img-tablet@2x.jpg);
+    background-image: url(../../imagies/Hero/img-desctop@2x.jpg);
   }
 }
 .our-advantages-container {
