--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,10 +1,11 @@
 .hero {
   min-height: 400px;
   background-image: linear-gradient(
+      to right,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
-    )
-    url(../../imagies/Hero/\ img-mobile.jpg);
+    ),
+    url(../imagies/Hero/img-mobile.jpg);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -15,7 +16,7 @@
   screen and (min-resolution: 192dpi) and (max-width: 767px),
   screen and (min-resolution: 2dppx) and (max-width: 767px) {
   .hero {
-    background-image: url(../../imagies/Hero/\ img-mobile@2x.jpg);
+    background-image: url(../../imagies/Hero/img-mobile@2x.jpg);
   }
 }
 
@@ -86,7 +87,7 @@
 
 @media screen and (min-width: 1200px) {
   .hero {
-    background-image: url(../../imagies/Hero/img-desctop.png);
+    background-image: url(../../imagies/Hero/img-desctop.jpg);
   }
 }
 
@@ -94,7 +95,7 @@
   screen and (min-resolution: 192dpi) and (min-width: 1200px),
   screen and (min-resolution: 2dppx) and (min-width: 1200px) {
   .hero {
-    background-image: url(../../imagies/Hero/img-tablet@2x.jpg);
+    background-image: url(../../imagies/Hero/img-desctop@2x.jpg);
   }
 }
 // .section-hero {
