--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,9 @@ body {
   .mobile-menu-open__icon {
     fill: var(--primary-text-color);
   }
+  .mobile-menu-open__icon:hover, .mobile-menu-open__icon:focus {
+    fill: var(--accent-text-color);
+  }
 }
 @media screen and (min-width: 768px) {
   .header {
@@ -383,7 +386,7 @@ body {
 }
 .hero {
   min-height: 400px;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../imagies/Hero/img-mobile.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../imagies/Hero/\ img-mobile.jpg);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -392,7 +395,7 @@ body {
 
 @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px), screen and (min-resolution: 192dpi) and (max-width: 767px), screen and (min-resolution: 2dppx) and (max-width: 767px) {
   .hero {
-    background-image: url(../../imagies/Hero/img-mobile@2x.jpg);
+    background-image: url(../../imagies/Hero/\ img-mobile@2x.jpg);
   }
 }
 .hero-container {
@@ -447,6 +450,7 @@ body {
 
 @media screen and (min-width: 768px) {
   .hero {
+    min-height: 400px;
     background-image: url(../../imagies/Hero/img-tablet.jpg);
   }
 }
@@ -457,6 +461,7 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .hero {
+    min-height: 600px;
     background-image: url(../../imagies/Hero/img-desctop.jpg);
   }
 }
