--- a/css/main.css
+++ b/css/main.css
@@ -386,7 +386,7 @@ body {
 }
 .hero {
   min-height: 400px;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/Hero/\ img-mobile.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/Hero/img-mobile.jpg);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -395,7 +395,7 @@ body {
 
 @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px), screen and (min-resolution: 192dpi) and (max-width: 767px), screen and (min-resolution: 2dppx) and (max-width: 767px) {
   .hero {
-    background-image: url(../../images/Hero/\ img-mobile@2x.jpg);
+    background-image: url(../../images/Hero/img-mobile@2x.jpg);
   }
 }
 .hero-container {
