--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -5,7 +5,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../images/Hero/\ img-mobile.jpg);
+    url(../../images/Hero/img-mobile.jpg);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -16,7 +16,7 @@
   screen and (min-resolution: 192dpi) and (max-width: 767px),
   screen and (min-resolution: 2dppx) and (max-width: 767px) {
   .hero {
-    background-image: url(../../images/Hero/\ img-mobile@2x.jpg);
+    background-image: url(../../images/Hero/img-mobile@2x.jpg);
   }
 }
 
