--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -38,6 +38,7 @@
   }
 
   .mobile-menu-open {
+    fill: var(--primary-text-color);
     background-color: transparent;
     border: none;
     padding: 0;
