--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,6 @@ body {
 
 @media screen and (max-width: 480px) {
   .container {
-    width: 450px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -131,6 +130,7 @@ body {
     color: var(--accent-text-color);
   }
   .mobile-menu-open {
+    fill: var(--primary-text-color);
     background-color: transparent;
     border: none;
     padding: 0;
@@ -386,7 +386,7 @@ body {
 }
 .hero {
   min-height: 400px;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/Hero/img-mobile.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero/img-mobile.jpg);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -395,7 +395,7 @@ body {
 
 @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px), screen and (min-resolution: 192dpi) and (max-width: 767px), screen and (min-resolution: 2dppx) and (max-width: 767px) {
   .hero {
-    background-image: url(../../images/Hero/img-mobile@2x.jpg);
+    background-image: url(../images/Hero/img-mobile@2x.jpg);
   }
 }
 .hero-container {
@@ -451,23 +451,23 @@ body {
 @media screen and (min-width: 768px) {
   .hero {
     min-height: 400px;
-    background-image: url(../../images/Hero/img-tablet.jpg);
+    background-image: url(../images/Hero/img-tablet.jpg);
   }
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), screen and (min-resolution: 192dpi) and (min-width: 768px), screen and (min-resolution: 2dppx) and (min-width: 768px) {
   .hero {
-    background-image: url(../../images/Hero/img-tablet@2x.jpg);
+    background-image: url(../images/Hero/img-tablet@2x.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
   .hero {
     min-height: 600px;
-    background-image: url(../../images/Hero/img-desctop.jpg);
+    background-image: url(../images/Hero/img-desctop.jpg);
   }
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 1200px) {
   .hero {
-    background-image: url(../../images/Hero/img-desctop@2x.jpg);
+    background-image: url(../images/Hero/img-desctop@2x.jpg);
   }
 }
 .our-advantages-container {
