--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -12,14 +12,6 @@
   background-color: #c4c4c4;
 }
 
-@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
-  screen and (min-resolution: 192dpi) and (max-width: 767px),
-  screen and (min-resolution: 2dppx) and (max-width: 767px) {
-  .hero {
-    background-image: url(../images/Hero/img-mobile@2x.jpg);
-  }
-}
-
 .hero-container {
   display: flex;
   flex-direction: column;
@@ -71,6 +63,15 @@
     background-color: #188ce8;
   }
 }
+
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+  screen and (min-resolution: 192dpi) and (max-width: 767px),
+  screen and (min-resolution: 2dppx) and (max-width: 767px) {
+  .hero {
+    background-image: url(../images/Hero/img-mobile@2x.jpg);
+  }
+}
+
 @media screen and (min-width: 768px) {
   .hero {
     min-height: 400px;
@@ -90,6 +91,10 @@
   .hero {
     min-height: 600px;
     background-image: url(../images/Hero/img-desctop.jpg);
+  }
+  .hero-title {
+    font-size: 44px;
+    line-height: 1.3;
   }
 }
 
