--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -1,7 +1,8 @@
-.modal {
+@media screen and (min-width: 480px) {
+  .modal {
     position: absolute;
-    width: 528px;
-    height: 581px;
+    width: 450px;
+    height: 609px;
     background-color: var(--primary-backdround-color);
     left: 50%;
     top: 50%;
@@ -10,9 +11,9 @@
     padding-right: 40px;
     padding-top: 40px;
     padding-bottom: 40px;
-}
+  }
 
-.modal-close-button {
+  .modal-close-button {
     background-color: transparent;
     width: 30px;
     height: 30px;
@@ -28,11 +29,18 @@
 
     &:hover .modal-close-button-icon,
     &:focus .modal-close-button-icon {
-        fill: var(--accent-background-color);
+      fill: var(--accent-background-color);
     }
-}
+  }
 
-.modal-close-button-icon {
+  .modal-close-button-icon {
     transition: fill 250ms var(--cubic-bezier);
+  }
 }
 
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
+}
