--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -1,69 +1,69 @@
-.our-team {
+@media screen and (min-width: 480px) {
+  .our-team {
     background-color: var(--subtle-background-color);
-}
+  }
 
-.our-team__main-title {
+  .our-team__main-title {
     font-weight: 700;
-    font-size: 36px;
+    font-size: 28px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-align: center;
     margin-bottom: 50px;
-}
+  }
 
-.our-team-list__item {
+  .our-team-list__item {
     background-color: var(--primary-backdround-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
+      0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-}
+  }
 
-.our-team__list {
+  .our-team__list {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
-}
+  }
 
-.our-team-container {
+  .our-team-container {
     align-items: center;
     margin-right: auto;
     margin-left: auto;
-}
+  }
 
-.our-team-card {
+  .our-team-card {
     padding-top: 30px;
     padding-bottom: 30px;
-}
+  }
 
-
-.our-team-card__title {
+  .our-team-card__title {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.17em;
     letter-spacing: 0.03em;
     text-align: center;
     margin-bottom: 10px;
-}
+  }
 
-.our-team-card__text {
+  .our-team-card__text {
     color: var(--light-theme-text);
     line-height: 1.17em;
     letter-spacing: 0.03em;
     text-align: center;
     margin-bottom: 16px;
-}
+  }
 
-.social-team-card {
+  .social-team-card {
     padding-top: 30px;
     padding-bottom: 30px;
-}
+  }
 
-.our-team-social-list__icon {
+  .our-team-social-list__icon {
     fill: #afb1b8;
     transition: fill 250ms var(--cubic-bezier);
-}
+  }
 
-.our-team-social-list__link {
+  .our-team-social-list__link {
     background-color: var(--dark-theme-text);
     width: 44px;
     height: 44px;
@@ -75,17 +75,25 @@
 
     &:hover,
     &:focus {
-        background-color: var(--accent-text-color);
+      background-color: var(--accent-text-color);
     }
-    
+
     &:hover .our-team-social-list__icon,
     &:focus .our-team-social-list__icon {
-        fill: var(--dark-theme-text);}}
+      fill: var(--dark-theme-text);
+    }
+  }
 
-.our-team-social-list {
+  .our-team-social-list {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
+  }
 }
 
+@media screen and (min-width: 1200px) {
+  .our-team__main-title {
+    font-size: 36px;
+  }
+}
