--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -202,6 +202,10 @@
   .header-contacts-item:not(:last-child) {
     margin-right: 50px;
   }
+
+  .menu-contacts {
+    font-size: 14px;
+  }
 }
 
 // .page-header-container {
