--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,8 +1,8 @@
-@media screen and (min-width: 480px) {
-  .section {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
+// @media screen and (min-width: 480px) {
+// }
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 @media screen and (min-width: 1200px) {
