--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -130,6 +130,19 @@
 
   .modal-form-terms {
     text-decoration: none;
+    text-decoration-line: underline;
+
+    &::after {
+      content: "";
+      width: 100%;
+      display: block;
+      height: 1px;
+      background-color: var(--accent-text-color);
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      border-radius: 1px;
+    }
   }
 
   .modal-form-submit {
