--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,177 +1,178 @@
-@media screen and (min-width: 480px) {
-  .footer {
-    background-color: var(--secondary-background-color);
-    padding-top: 60px;
-    padding-bottom: 60px;
+// @media screen and (min-width: 480px) {
+// }
+.footer {
+  background-color: var(--secondary-background-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.footer-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.footer-logo {
+  font-family: Raleway, sans-serif;
+  color: var(--dark-theme-text);
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  margin-bottom: 20px;
+  display: block;
+}
+
+.footer-contac-list__item {
+  display: block;
+
+  &:not(:last-child) {
+    margin-bottom: 9px;
+  }
+}
+
+.footer-address {
+  color: var(--dark-theme-text);
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  &:hover,
+  &:focus {
+    color: var(--accent-text-color);
+  }
+}
+
+.footer-contacts {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  transition: color 250ms var(--cubic-bezier);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-text-color);
+  }
+}
+
+.footer-social-list__title {
+  color: var(--dark-theme-text);
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  margin-bottom: 20px;
+}
+
+.footer-social-icon__svg {
+  fill: var(--dark-theme-text);
+}
+
+.footer-social-list__link {
+  background-color: rgba(255, 255, 255, 0.1);
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: fill 250ms var(--cubic-bezier),
+    background-color 250ms var(--cubic-bezier);
+
+  &:hover,
+  &:focus {
+    background-color: var(--accent-text-color);
   }
 
-  .footer-container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .footer-logo {
-    font-family: Raleway, sans-serif;
-    color: var(--dark-theme-text);
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    margin-bottom: 20px;
-    display: block;
-  }
-
-  .footer-contac-list__item {
-    display: block;
-
-    &:not(:last-child) {
-      margin-bottom: 9px;
-    }
-  }
-
-  .footer-address {
-    color: var(--dark-theme-text);
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-
-    &:hover,
-    &:focus {
-      color: var(--accent-text-color);
-    }
-  }
-
-  .footer-contacts {
-    color: rgba(255, 255, 255, 0.6);
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    transition: color 250ms var(--cubic-bezier);
-
-    &:hover,
-    &:focus {
-      color: var(--accent-text-color);
-    }
-  }
-
-  .footer-contacts-container {
-    margin-bottom: 60px;
-  }
-  .footer-social-list__title {
-    color: var(--dark-theme-text);
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 14px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    margin-bottom: 20px;
-  }
-
-  .footer-social-icon__svg {
+  &:hover .social-icon,
+  &:focus .social-icon {
     fill: var(--dark-theme-text);
   }
+}
 
-  .footer-social-list__link {
-    background-color: rgba(255, 255, 255, 0.1);
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: fill 250ms var(--cubic-bezier),
-      background-color 250ms var(--cubic-bezier);
+.footer-social-list__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
 
-    &:hover,
-    &:focus {
-      background-color: var(--accent-text-color);
-    }
+.footer-social-list {
+  margin-bottom: 60px;
+}
 
-    &:hover .social-icon,
-    &:focus .social-icon {
-      fill: var(--dark-theme-text);
-    }
-  }
+.footer-contacts-container {
+  margin-bottom: 60px;
+}
 
-  .footer-social-list__item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-  }
+.footer-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
 
-  .footer-social-list {
-    margin-bottom: 60px;
-  }
+.footer-form-subtitle {
+  color: var(--dark-theme-text);
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  margin-bottom: 20px;
+}
 
-  .footer-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-  }
+.footer-form__subscribtion-email {
+  color: var(--dark-theme-text);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.4;
+  letter-spacing: 0.03em;
+  width: 450px;
+  height: 50px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-bottom: 20px;
+  outline: none;
 
-  .footer-form-subtitle {
-    color: var(--dark-theme-text);
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 14px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    margin-bottom: 20px;
-  }
-
-  .footer-form__subscribtion-email {
-    color: var(--dark-theme-text);
+  &::placeholder {
+    color: rgba(255, 255, 255, 0.6);
     font-size: 16px;
     font-weight: 400;
     line-height: 1.4;
     letter-spacing: 0.03em;
-    width: 450px;
-    height: 50px;
-    background-color: transparent;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    border-radius: 4px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-left: 16px;
-    padding-right: 16px;
-    margin-bottom: 20px;
-    outline: none;
-
-    &::placeholder {
-      color: rgba(255, 255, 255, 0.6);
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 1.4;
-      letter-spacing: 0.03em;
-    }
   }
+}
 
-  .footer-form__submit-btn {
-    font-family: inherit;
-    color: var(--dark-theme-text);
-    background-color: var(--accent-background-color);
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border: none;
-    padding-left: 29px;
-    padding-right: 29px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    display: flex;
-  }
+.footer-form__submit-btn {
+  font-family: inherit;
+  color: var(--dark-theme-text);
+  background-color: var(--accent-background-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  padding-left: 29px;
+  padding-right: 29px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: flex;
+}
 
-  .footer-form-submit-btn__icon {
-    margin-left: 10px;
-  }
+.footer-form-submit-btn__icon {
+  margin-left: 10px;
 }
 @media screen and (min-width: 768px) {
   .footer-container {
@@ -193,6 +194,7 @@
     align-items: baseline;
     flex-direction: row;
     flex-wrap: nowrap;
+    text-align: start;
   }
 
   .footer-form {
@@ -201,6 +203,10 @@
     align-items: baseline;
     flex-direction: row;
     flex-wrap: nowrap;
+  }
+
+  .footer-contac-list__item {
+    width: max-content;
   }
 
   .footer-contacts-container {
@@ -222,5 +228,13 @@
       line-height: 1.4;
       letter-spacing: 0.03em;
     }
+  }
+
+  .footer-social-list {
+    margin-bottom: 0px;
+  }
+
+  .footer-contacts-container {
+    margin-bottom: 0px;
   }
 }
