--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -33,7 +33,7 @@
   line-height: 1.6;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  max-width: 696px;
+  max-width: 360px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -68,14 +68,28 @@
   screen and (min-resolution: 192dpi) and (max-width: 767px),
   screen and (min-resolution: 2dppx) and (max-width: 767px) {
   .hero {
-    background-image: url(../images/Hero/img-mobile@2x.jpg);
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/Hero/img-mobile@2x.jpg);
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero {
     min-height: 400px;
-    background-image: url(../images/Hero/img-tablet.jpg);
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/Hero/img-tablet.jpg);
+  }
+
+  .hero-title {
+    max-width: 360px;
   }
 }
 
@@ -83,18 +97,32 @@
   screen and (min-resolution: 192dpi) and (min-width: 768px),
   screen and (min-resolution: 2dppx) and (min-width: 768px) {
   .hero {
-    background-image: url(../images/Hero/img-tablet@2x.jpg);
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/Hero/img-tablet@2x.jpg);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .hero {
     min-height: 600px;
-    background-image: url(../images/Hero/img-desctop.jpg);
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/Hero/img-desctop.jpg);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
   .hero-title {
     font-size: 44px;
     line-height: 1.3;
+    max-width: 696px;
   }
 }
 
@@ -102,7 +130,12 @@
   screen and (min-resolution: 192dpi) and (min-width: 1200px),
   screen and (min-resolution: 2dppx) and (min-width: 1200px) {
   .hero {
-    background-image: url(../images/Hero/img-desctop@2x.jpg);
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/Hero/img-desctop@2x.jpg);
   }
 }
 // .section-hero {
