--- a/sass/layout/_regular-customers.scss
+++ b/sass/layout/_regular-customers.scss
@@ -1,64 +1,64 @@
-@media screen and (min-width: 480px) {
-  .regular-customers-title {
-    color: var(--primary-text-color);
-    font-size: 28px;
-    font-weight: 700;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-align: center;
-    margin-bottom: 30px;
+// @media screen and (min-width: 480px) {
+// }
+.regular-customers-title {
+  color: var(--primary-text-color);
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.regular-customers-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.regular-customers-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.regular-customer-container:not(:last-child) {
+  margin-right: 30px;
+}
+
+.customer {
+  fill: #afb1b8;
+  transition: fill 250ms var(--cubic-bezier);
+}
+
+.regular-customer-item {
+  width: 210px;
+  height: 92px;
+}
+
+.regular-customer-link {
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  transition: border-color 250ms var(--cubic-bezier);
+
+  &:hover,
+  &:focus {
+    border-color: var(--accent-text-color);
   }
 
-  .regular-customers-list {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    gap: 30px;
-  }
-
-  .regular-customers-item:not(:last-child) {
-    margin-right: 30px;
-  }
-
-  .regular-customer-container:not(:last-child) {
-    margin-right: 30px;
-  }
-
-  .customer {
-    fill: #afb1b8;
-    transition: fill 250ms var(--cubic-bezier);
-  }
-
-  .regular-customer-item {
-    width: 210px;
-    height: 92px;
-  }
-
-  .regular-customer-link {
-    border: 1px solid #afb1b8;
-    border-radius: 4px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    transition: border-color 250ms var(--cubic-bezier);
-
-    &:hover,
-    &:focus {
-      border-color: var(--accent-text-color);
-    }
-
-    &:hover .customer,
-    &:focus .customer {
-      fill: var(--accent-text-color);
-    }
-  }
-
-  .regular-customer-link:hover .customer,
-  .regular-customer-link:focus .customer {
+  &:hover .customer,
+  &:focus .customer {
     fill: var(--accent-text-color);
   }
+}
+
+.regular-customer-link:hover .customer,
+.regular-customer-link:focus .customer {
+  fill: var(--accent-text-color);
 }
 
 @media screen and (min-width: 768px) {
