--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -132,7 +132,7 @@
   font-weight: 400;
   line-height: 1.4;
   letter-spacing: 0.03em;
-  width: 450px;
+  max-width: 450px;
   height: 50px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -195,6 +195,7 @@
     flex-direction: row;
     flex-wrap: nowrap;
     text-align: start;
+    justify-content: space-between;
   }
 
   .footer-form {
@@ -209,13 +210,13 @@
     width: max-content;
   }
 
-  .footer-contacts-container {
-    margin-right: 70px;
-  }
+  // .footer-contacts-container {
+  //   margin-right: 70px;
+  // }
 
-  .footer-social-list {
-    margin-right: 94px;
-  }
+  // .footer-social-list {
+  //   margin-right: 94px;
+  // }
 
   .footer-form__subscribtion-email {
     margin-right: 12px;
