--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,5 +1,5 @@
-@media screen and (min-width: 480px) {
-}
+// @media screen and (min-width: 480px) {
+// }
 .portfolio-button-list {
   display: flex;
   flex-wrap: wrap;
@@ -121,13 +121,10 @@
 @media screen and (min-width: 768px) {
   .portfolio-button-list {
     justify-content: center;
-    padding-bottom: 30px;
   }
 }
 
-@media screen and (min-width: 1200px) {
-  .portfolio-button-list {
-    // justify-content: center;
-    padding-bottom: 50px;
-  }
-}
+// @media screen and (min-width: 1200px) {
+//   .portfolio-button-list {
+//   }
+// }
