--- a/css/main.css
+++ b/css/main.css
@@ -761,7 +761,7 @@ body {
 }
 
 .regular-customer-item {
-  width: 210px;
+  max-width: 210px;
   height: 92px;
 }
 
@@ -787,6 +787,12 @@ body {
   fill: var(--accent-text-color);
 }
 
+@media screen and (min-width: 480px) {
+  .regular-customer-item {
+    width: 210px;
+    height: 92px;
+  }
+}
 @media screen and (min-width: 768px) {
   .regular-customer-item {
     width: 226px;
@@ -912,6 +918,7 @@ body {
 }
 
 .footer-form-subtitle {
+  display: block;
   color: var(--dark-theme-text);
   font-weight: 700;
   text-transform: uppercase;
@@ -928,6 +935,7 @@ body {
   line-height: 1.4;
   letter-spacing: 0.03em;
   max-width: 450px;
+  width: 100%;
   height: 50px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -945,6 +953,14 @@ body {
   font-weight: 400;
   line-height: 1.4;
   letter-spacing: 0.03em;
+}
+
+.footer-form-subscription {
+  width: 100%;
+}
+
+.footer-form-input {
+  width: 100%;
 }
 
 .footer-form__submit-btn {
@@ -980,6 +996,9 @@ body {
   .footer-form {
     flex-wrap: wrap;
   }
+  .footer-form__subscribtion-email {
+    width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer-container {
@@ -1004,6 +1023,9 @@ body {
     margin-right: 12px;
     width: 385px;
   }
+  .footer-form__subscribtion-email .footer-form-subscription {
+    width: 450px;
+  }
   .footer-form__subscribtion-email::placeholder {
     color: rgba(255, 255, 255, 0.6);
     font-size: 16px;
@@ -1016,6 +1038,12 @@ body {
   }
   .footer-contacts-container {
     margin-bottom: 0px;
+  }
+  .footer-form-subscription {
+    width: 450px;
+  }
+  .footer-form-input {
+    width: 450px;
   }
 }
 .portfolio-button-list {
