--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -117,6 +117,7 @@
 }
 
 .footer-form-subtitle {
+  display: block;
   color: var(--dark-theme-text);
   font-weight: 700;
   text-transform: uppercase;
@@ -133,6 +134,7 @@
   line-height: 1.4;
   letter-spacing: 0.03em;
   max-width: 450px;
+  width: 100%;
   height: 50px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -151,6 +153,13 @@
     line-height: 1.4;
     letter-spacing: 0.03em;
   }
+}
+
+.footer-form-subscription {
+  width: 100%;
+}
+.footer-form-input {
+  width: 100%;
 }
 
 .footer-form__submit-btn {
@@ -174,6 +183,7 @@
 .footer-form-submit-btn__icon {
   margin-left: 10px;
 }
+
 @media screen and (min-width: 768px) {
   .footer-container {
     display: flex;
@@ -185,6 +195,10 @@
 
   .footer-form {
     flex-wrap: wrap;
+  }
+
+  .footer-form__subscribtion-email {
+    width: 450px;
   }
 }
 
@@ -210,18 +224,13 @@
     width: max-content;
   }
 
-  // .footer-contacts-container {
-  //   margin-right: 70px;
-  // }
-
-  // .footer-social-list {
-  //   margin-right: 94px;
-  // }
-
   .footer-form__subscribtion-email {
     margin-right: 12px;
     width: 385px;
 
+    .footer-form-subscription {
+      width: 450px;
+    }
     &::placeholder {
       color: rgba(255, 255, 255, 0.6);
       font-size: 16px;
@@ -237,5 +246,12 @@
 
   .footer-contacts-container {
     margin-bottom: 0px;
+  }
+
+  .footer-form-subscription {
+    width: 450px;
+  }
+  .footer-form-input {
+    width: 450px;
   }
 }
