--- a/sass/layout/_regular-customers.scss
+++ b/sass/layout/_regular-customers.scss
@@ -1,5 +1,3 @@
-// @media screen and (min-width: 480px) {
-// }
 .regular-customers-title {
   color: var(--primary-text-color);
   font-size: 28px;
@@ -31,7 +29,7 @@
 }
 
 .regular-customer-item {
-  width: 210px;
+  max-width: 210px;
   height: 92px;
 }
 
@@ -59,6 +57,13 @@
 .regular-customer-link:hover .customer,
 .regular-customer-link:focus .customer {
   fill: var(--accent-text-color);
+}
+
+@media screen and (min-width: 480px) {
+  .regular-customer-item {
+    width: 210px;
+    height: 92px;
+  }
 }
 
 @media screen and (min-width: 768px) {
