--- a/css/main.css
+++ b/css/main.css
@@ -387,6 +387,7 @@ body {
   .mobile-menu__socials {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
   }
   .mobile-menu__social-item {
     color: var(--accent-text-color);
@@ -956,7 +957,7 @@ body {
 }
 
 .footer-form-subscription {
-  width: 100%;
+  width: auto;
 }
 
 .footer-form-input {
@@ -985,6 +986,11 @@ body {
   margin-left: 10px;
 }
 
+@media screen and (min-width: 480px) {
+  .footer-form__subscribtion-email {
+    width: 450px;
+  }
+}
 @media screen and (min-width: 768px) {
   .footer-container {
     display: flex;
