--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -125,6 +125,7 @@
   .mobile-menu__socials {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
   }
 
   .mobile-menu__social-item {
