--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -89,7 +89,7 @@
   .mobile-menu__menu-phone {
     color: var(--accent-text-color);
     font-weight: 500;
-    font-size: 40px;
+    font-size: 9.01vw;
     line-height: 1.17;
     letter-spacing: 0.02em;
     display: flex;
@@ -101,7 +101,7 @@
   .mobile-menu__menu-email {
     color: var(--light-theme-text);
     font-weight: 500;
-    font-size: 14px;
+    font-size: 6.01vw;
     line-height: 1.17;
     letter-spacing: 0.02em;
     display: flex;
